--- a/WaffleOnClacton/index.html
+++ b/WaffleOnClacton/index.html
@@ -58,7 +58,7 @@
 
     <main id="main">
         <div id=0 class="about disp">
-            <h1>hello</h1>
+            <h1>hello and goodbye</h1>
 
             <div class="foot">
                 <footer>
