--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <a href="./WaffleOnClacton/index.html">Waffle On</a>
+    <a href="./GuacUnderMaintenance/index.html">GuacUnderMaintenance</a>
 </body>
 </html>
