--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Project Directory</title>
 </head>
 <body>
-    <a href="./WaffleOnClacton/index.html">Waffle On</a>
+    <a href="./WaffleOnClacton/index.html">Waffle On</a> <br>
     <a href="./GuacUnderMaintenance/index.html">GuacUnderMaintenance</a>
 </body>
 </html>
