--- a/GuacUnderMaintenance/index.html
+++ b/GuacUnderMaintenance/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./master.css">
+    <link rel="shortcut icon" href="./Logo_Icon.png" type="image/png">
     <title>Guac | Auto Trading Bot</title>
 </head>
 <body>
