--- a/GuacUnderMaintenance/index.html
+++ b/GuacUnderMaintenance/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,18 @@
     <link rel="shortcut icon" href="./Logo_Icon.png" type="image/png">
     <title>Guac | Auto Trading Bot</title>
 </head>
+
 <body>
-<div>
-    <img src="./Logo_Icon.png" alt="guac logo">
-    <h2>Under Maintenance</h2>
-    <p>Our servers and website are currently down under maintenance undergoing a complete overhaul of our infrastructure and bringing you brand new features with more optimised systems. <br>
-    Current user's bots will continue to run in the background during this time but we will not be accepting any new sign ups currently. <br>
-    We do not have a date specific date for its completion. <br>
-    Thank you for reading.</p>
-</div>
+    <div>
+        <img src="./Logo_Icon.png" alt="guac logo">
+        <h2>Under Maintenance</h2>
+        <p>Our servers and website are currently down under maintenance undergoing a complete overhaul of our
+            infrastructure and bringing you brand new features with more optimised systems. <br>
+            Current user's bots will continue to run in the background during this time but we will not be accepting any
+            new sign ups currently. <br>
+            We do not have a date specific date for its completion. <br>
+            Thank you for reading.</p>
+    </div>
 </body>
+
 </html>
