--- a/GuacUnderMaintenance/index.html
+++ b/GuacUnderMaintenance/index.html
@@ -14,10 +14,10 @@
         <img src="./Logo_Icon.png" alt="guac logo">
         <h2>Under Maintenance</h2>
         <p>Our servers and website are currently down under maintenance undergoing a complete overhaul of our
-            infrastructure and bringing you brand new features with more optimised systems. <br>
+            infrastructure and bringing you brand new features with more optimised systems.
             Current user's bots will continue to run in the background during this time but we will not be accepting any
-            new sign ups currently. <br>
-            We do not have a date specific date for its completion. <br>
+            new sign ups currently.
+            We do not have a specific date for its completion. <br>
             Thank you for reading.</p>
     </div>
 </body>
