--- a/GuacUnderMaintenance/index.html
+++ b/GuacUnderMaintenance/index.html
@@ -17,7 +17,7 @@
             infrastructure and bringing you brand new features with more optimised systems.
             Current user's bots will continue to run in the background during this time but we will not be accepting any
             new sign ups currently.
-            We do not have a specific date for its completion. <br>
+            We do not have a specific date for its completion. <br> <br>
             Thank you for reading.</p>
     </div>
 </body>
