--- a/UnderMaintenance/index.html
+++ b/UnderMaintenance/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./master.css">
     <link rel="shortcut icon" href="./Logo_Icon.png" type="image/png">
+    <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async="" defer="">
+        new Crate({
+        server: '715943189802123335', // Guac
+        channel: '715949668030218302' // #general
+        })
+      </script>
     <title>Guac | Auto Trading Bot</title>
 </head>
 
@@ -13,12 +19,8 @@
     <div>
         <img src="./Logo_Icon.png" alt="guac logo">
         <h2>Under Maintenance</h2>
-        <p>Our servers and website are currently down under maintenance undergoing a complete overhaul of our
-            infrastructure and bringing you brand new features with more optimised systems.
-            Current user's bots will continue to run in the background during this time but we will not be accepting any
-            new sign ups currently.
-            We do not have a specific date for its completion. <br> <br>
-            Thank you for reading.</p>
+        <p>Guac is currently undergoing maintenance. A complete overhaul of our infrastructure is in the works! We hope to bring to our users a more premium and optimised experience. Please note that current users' bots will continue to operate during the maintenance period and new users will be informed when sign-ups are reopened. Stay informed on our socials! Currently, there is no deadline for when the maintenance period will end. <br> <br>
+            Thank you for your patience!</p>
     </div>
 </body>
 
