--- a/WaffleOnClacton/index.html
+++ b/WaffleOnClacton/index.html
@@ -24,16 +24,20 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Oswald:wght@500&display=swap"
     rel="stylesheet">
-
   <link rel="stylesheet" href="./master.css">
+  <link rel="shortcut icon" href="./imagesW/waffleOnIcon.png" type="image/png">
   <title>Waffle On | Clacton</title>
 </head>
 
 <div class="loading">
   <div class="load-container">
     <img src="./imagesW/waffleOnLogo.png" alt="">
-    <div class="loader"></div>
-    <img id="logoboxes" src="./imagesW/logo boxes.png" alt="">
+    <section>
+      <div class="loaderSquare"></div>
+      <div class="loaderSquare"></div>
+      <div class="loaderSquare"></div>
+      <div class="loaderSquare"></div>
+    </section>
   </div>
 </div>
 
@@ -49,7 +53,6 @@
   <header>
     <div>
       <a href="./index.html"><img src="./imagesW/waffleOnLogo.png" alt="WaffleOn Logo"></a>
-      <button>Contact</button>
     </div>
     <div class="nav-container">
       <nav>
@@ -147,13 +150,13 @@
           <h3>Info</h3>
           <div class="OpenTimes">
             <div>
-              <p>Sunday:</p>
-              <p>Monday:</p>
-              <p>Tuesday:</p>
-              <p>Wednesday:</p>
-              <p>Thursday:</p>
-              <p>Friday:</p>
-              <p>Saturday:</p>
+              <p>Sunday</p>
+              <p>Monday</p>
+              <p>Tuesday</p>
+              <p>Wednesday</p>
+              <p>Thursday</p>
+              <p>Friday</p>
+              <p>Saturday</p>
             </div>
             <div>
               <p>5 - 10PM</p>
