--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv = "refresh" content = "2; url = https://www.guac.trade/UnderMaintenance/index.html"/>
     <title>Project Directory</title>
 </head>
 <body>
+
+
     <a href="./WaffleOnClacton/index.html">Waffle On</a> <br>
-    <a href="./GuacUnderMaintenance/index.html">GuacUnderMaintenance</a>
+    <a href="./UnderMaintenance/index.html">GuacUnderMaintenance</a>
 </body>
 </html>
