--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Project Directory</title>
 </head>
 <body>
-
-
+    <h1>REDIRECT</h1>
     <a href="./WaffleOnClacton/index.html">Waffle On</a> <br>
     <a href="./UnderMaintenance/index.html">GuacUnderMaintenance</a>
 </body>
