--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8" />
+<!-- saved from url=(0084)file:///C:/Users/Admin/Documents/Peer-to-Peer%20Cue%20System%20-%2D-%20Reciever.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link type="text/css" id="dark-mode" rel="stylesheet" href="./Peer-to-Peer Cue System --- Reciever_files/receive.html">
+        
         <meta name="viewport" content="width=device-width">
-        <title>Peer-to-Peer Cue System --- Reciever</title>
-        <link rel="stylesheet" href="style.css">
+        <title>Mimic revanced - Host</title>
+        <link rel="stylesheet" href="./Peer-to-Peer Cue System --- Reciever_files/style.css">
     </head>
     <body>
         <table class="display">
-            <tr>
+            <tbody><tr>
                 <td class="title">Status:</td>
                 <td class="title">Messages:</td>
             </tr>
             <tr>
                 <td>
-                    <div id="receiver-id" style="font-weight: bold;" title="Copy this ID to the input on send.html.">ID:</div>
+                    <div id="receiver-id" style="font-weight: bold;" title="Copy this link and send it to your friends.">ID: f1718af9-f9c5-4df6-a9da-db0954ea2368</div>
                 </td>
                 <td>
-                    <input type="text" id="sendMessageBox" placeholder="Enter a message..." autofocus="true" />
+                    <input type="text" id="sendMessageBox" placeholder="Enter a message..." autofocus="true">
                     <button type="button" id="sendButton">Send</button>
                     <button type="button" id="clearMsgsButton">Clear Msgs (Local)</button>
                 </td>
             </tr>
             <tr>
-                <td><div id="status" class="status"></div></td>
-                <td><div class="message" id="message"></div></td>
+                <td><div id="status" class="status">Connected</div></td>
+                <td><div class="message" id="message"><br><span class="msg-time">11:36:27</span>  -  Msgs cleared</div></td>
             </tr>
             <tr>
                 <td class="display-box standby" id="standby"><h2>Standby</h2></td>
@@ -34,16 +34,19 @@
                 <td class="display-box hidden" id="fade"><h2>Fade</h2></td>
                 <td class="display-box hidden" id="off"><h2>All Off</h2></td>
             </tr>
-        </table>
+        </tbody></table>
 
-        <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
+        <script src="./Peer-to-Peer Cue System --- Reciever_files/peerjs.min.js.download"></script>
         <script type="text/javascript">
             (function () {
+
+                clientPlayerName = "Host";
+                players = {};
 
                 var lastPeerId = null;
                 var peer = null; // Own peer object
                 var peerId = null;
-                var conn = null;
+                var conn = [];
                 var recvId = document.getElementById("receiver-id");
                 var status = document.getElementById("status");
                 var message = document.getElementById("message");
@@ -76,22 +79,18 @@
                             lastPeerId = peer.id;
                         }
 
+                        console.log("TEST: " + peer.clientPlayerName)
                         console.log('ID: ' + peer.id);
-                        recvId.innerHTML = "ID: " + peer.id;
+                        recvId.innerHTML = "Share link: " + window.location.hostname + "?hostid=" + peer.id;
                         status.innerHTML = "Awaiting connection...";
                     });
                     peer.on('connection', function (c) {
-                        // Allow only a single connection
-                        if (conn && conn.open) {
-                            c.on('open', function() {
-                                c.send("Already connected to another client");
-                                setTimeout(function() { c.close(); }, 500);
-                            });
-                            return;
-                        }
-
-                        conn = c;
-                        console.log("Connected to: " + conn.peer);
+                        conn.push(c);
+                        console.log("TEST: " + conn);
+                        cPlayerID = c.peer
+                        players[cPlayerID] = {playerName : "unknown"};
+                        currentConn = c
+                        console.log("Connected to: " + c.peer);
                         status.innerHTML = "Connected";
                         ready();
                     });
@@ -105,7 +104,7 @@
                         peer.reconnect();
                     });
                     peer.on('close', function() {
-                        conn = null;
+                        // conn = [];
                         status.innerHTML = "Connection destroyed. Please refresh";
                         console.log('Connection destroyed');
                     });
@@ -120,42 +119,40 @@
                  * Defines callbacks to handle incoming data and connection events.
                  */
                 function ready() {
-                    conn.on('data', function (data) {
-                        console.log("Data recieved");
-                        var cueString = "<span class=\"cueMsg\">Cue: </span>";
-                        switch (data) {
-                            case 'Go':
-                                go();
-                                addMessage(cueString + data);
-                                break;
-                            case 'Fade':
-                                fade();
-                                addMessage(cueString + data);
-                                break;
-                            case 'Off':
-                                off();
-                                addMessage(cueString + data);
-                                break;
-                            case 'Reset':
-                                reset();
-                                addMessage(cueString + data);
-                                break;
-                            default:
-                                addMessage("<span class=\"peerMsg\">Peer: </span>" + data);
-                                break;
-                        };
-                    });
-                    conn.on('close', function () {
-                        status.innerHTML = "Connection reset<br>Awaiting connection...";
-                        conn = null;
+                          currentConn.on('data', function (data) {
+                            console.log("Data recieved");
+                            var playerVote = "<span class=\"cueMsg\">" + data[0] + ": </span>";
+                            switch (data[0]) {
+                                case 'setPlayerName':
+                                    changePlayerName(data[1]["playerName"]);
+                                    console.log(data[1]["playerID"] + " changed to" + data[1]["playerName"]);
+                                    break;
+                                case 'F':
+                                    fade();
+                                    addMessage(playerVote + data[1]);
+                                    break;
+                                default:
+                                    for (let step = 0; step < conn.length; step++) {
+                                            console.log(conn.length);
+                                            console.log(conn);
+                                            conn[step].send(["chatMessage", {"playerName":data[1]["playerName"], "msg" : data[1]["msg"]}]);
+                                        }
+                                    addMessage("<span class=\"peerMsg\">" + data[1]["playerName"] + ": </span>" + data[1]["msg"]);
+                                    break;
+                            };
+                        });
+                        currentConn.on('close', function () { // Execute code when user disconnects.
+                            for (let step = 0; step < conn.length; step++) {
+                                if (conn[step]["_open"] == false) {
+                                    conn.splice(step, 1);
+                                }
+                            }
                     });
                 }
 
-                function go() {
-                    standbyBox.className = "display-box hidden";
-                    goBox.className = "display-box go";
-                    fadeBox.className = "display-box hidden";
-                    offBox.className = "display-box hidden";
+                function changePlayerName(newName) {
+                    players[cPlayerID]["playerName"] = newName;
+                    console.log(players);
                     return;
                 };
 
@@ -217,10 +214,12 @@
                 });
                 // Send message
                 sendButton.addEventListener('click', function () {
-                    if (conn && conn.open) {
+                    if (conn[0] && conn[0].open) {
                         var msg = sendMessageBox.value;
                         sendMessageBox.value = "";
-                        conn.send(msg);
+                        for (let step = 0; step < conn.length; step++) {
+                          conn[step].send(["chatMessage", {"playerName":clientPlayerName, "msg" : msg}]);
+                        }
                         console.log("Sent: " + msg)
                         addMessage("<span class=\"selfMsg\">Self: </span>" + msg);
                     } else {
@@ -234,5 +233,18 @@
                 initialize();
             })();
         </script>
-    </body>
-</html>
+    
+
+<style type="text/css" id="dark-mode-custom-color">
+		:root{
+			--bg-color:rgba(26,26,26,1);
+			--text-color:rgba(255,200,0,1);
+			--a-color:rgba(76,200,200,1);
+			--a-visited-color:rgba(225,115,25,1);
+			--a-hover-color:rgba(211,211,211,1);
+			--input-border-color:rgba(211,211,211,0.2);
+			--input-placeholder-color:rgba(111,174,195,1);
+			--dialog-bg-color:rgba(36,36,36,0.95);
+			--bg-image:linear-gradient(rgba(26,26,26,1),rgba(26,26,26,1));
+		}
+	</style></body></html>
