--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -4,7 +4,7 @@
         
         <meta name="viewport" content="width=device-width">
         <title>Mimic revanced - Host</title>
-        <link rel="stylesheet" href="./Peer-to-Peer Cue System --- Reciever_files/style.css">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <table class="display">
@@ -14,7 +14,7 @@
             </tr>
             <tr>
                 <td>
-                    <div id="receiver-id" style="font-weight: bold;" title="Copy this link and send it to your friends.">ID: f1718af9-f9c5-4df6-a9da-db0954ea2368</div>
+                    <div id="receiver-id" style="font-weight: bold;" title="Copy this link and send it to your friends.">Share link: f1718af9-f9c5-4df6-a9da-db0954ea2368</div>
                 </td>
                 <td>
                     <input type="text" id="sendMessageBox" placeholder="Enter a message..." autofocus="true">
