--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -36,7 +36,7 @@
             </tr>
         </tbody></table>
 
-        <script src="./Peer-to-Peer Cue System --- Reciever_files/peerjs.min.js.download"></script>
+        <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
         <script type="text/javascript">
             (function () {
 
