--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0084)file:///C:/Users/Admin/Documents/Peer-to-Peer%20Cue%20System%20-%2D-%20Reciever.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link type="text/css" id="dark-mode" rel="stylesheet" href="./Peer-to-Peer Cue System --- Reciever_files/receive.html">
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link type="text/css" id="dark-mode" rel="stylesheet">
         
         <meta name="viewport" content="width=device-width">
         <title>Mimic revanced - Host</title>
