--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -55,15 +55,12 @@
             (function () {
 
                 // Auto Room Connect
-                try {
                     const queryString = window.location.search;
                     console.log(queryString);
                     const urlParams = new URLSearchParams(queryString);
                     const hostID = urlParams.get('hostid');
-                    join(hostID)
-                } catch {
+                    join(hostID);
                     console.log("no Host ID Parameter");
-                }
 
                 // Generate a random number between 0 and 1
                 let randomNumber = Math.random();
