--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -59,6 +59,7 @@
                     console.log(queryString);
                     const urlParams = new URLSearchParams(queryString);
                     const hostID = urlParams.get('hostid');
+                    console.log(hostID);
                     join(hostID);
                     console.log("no Host ID Parameter");
 
