--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -53,16 +53,6 @@
         <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
         <script type="text/javascript">
             (function () {
-
-                // Auto Room Connect
-                const queryString = window.location.search;
-                console.log(queryString);
-                const urlParams = new URLSearchParams(queryString);
-                const hostID = urlParams.get('hostid');
-                console.log("HERE: " + hostID);
-                join(hostID);
-                console.log("no Host ID Parameter");
-
                 // Generate a random number between 0 and 1
                 let randomNumber = Math.random();
                 // Multiply the result by 10 to get a number between 0 and 10
@@ -140,6 +130,17 @@
                         alert('' + err);
                     });
                 };
+
+                // Auto Room Connect
+                try {
+                    const queryString = window.location.search;
+                    console.log(queryString);
+                    const urlParams = new URLSearchParams(queryString);
+                    const hostID = urlParams.get('hostid');
+                    join(hostID);
+                } catch {
+                    console.log("No Host ID Parameter");
+                }
 
                 /**
                  * Create the connection between the two Peers.
