--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -154,7 +154,7 @@
                         conn.close();
                     }
 
-                    console.log(hostID);
+                    console.log("JOINIDHERE: " + hostID);
 
                     // Create connection to destination peer specified in the input field
                     conn = peer.connect(hostID, {
