--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -50,7 +50,7 @@
             </tr>
         </table>
 
-        <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
+        <script src="./peerjs.min.js"></script>
         <script type="text/javascript">
             (function () {
                 // Generate a random number between 0 and 1
