re add share link ability

--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -131,15 +131,15 @@
                     });
 
                     // Auto Room Connect
-                    // try {
-                    //     const queryString = window.location.search;
-                    //     console.log(queryString);
-                    //     const urlParams = new URLSearchParams(queryString);
-                    //     const hostID = urlParams.get('hostid');
-                    //     join(hostID);
-                    // } catch {
-                    //     console.log("No Host ID Parameter");
-                    // }
+                    try {
+                        const queryString = window.location.search;
+                        console.log(queryString);
+                        const urlParams = new URLSearchParams(queryString);
+                        const hostID = urlParams.get('hostid');
+                        join(hostID);
+                    } catch {
+                        console.log("No Host ID Parameter");
+                    }
                 };
 
                 /**
@@ -157,7 +157,7 @@
                     console.log("JOINIDHERE: " + hostID);
 
                     // Create connection to destination peer specified in the input field
-                    conn = peer.connect(recvIdInput.value, {
+                    conn = peer.connect(hostID, {
                         reliable: true,
                     });
 
