--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -35,7 +35,7 @@
             </tr>
         </tbody></table>
 
-        <script src="./peerjs.min.js"></script>
+        <script src="./Mimic/peerjs.min.js"></script>
         <script type="text/javascript">
             (function () {
 
