--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -137,13 +137,14 @@
                  * Sets up callbacks that handle any events related to the
                  * connection and data received on it.
                  */
-                function join(hostID,) {
+                function join(hostID) {
                     // Close old connection
                     if (conn) {
                         conn.close();
                     }
 
-                    console.log("JOINIDHERE: " + hostID);
+                    console.log("JOINIDHERE: ");
+                    console.log(hostID);
 
                     // Create connection to destination peer specified in the input field
                     conn = peer.connect(hostID, {
