--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -50,7 +50,7 @@
             </tr>
         </table>
 
-        <script src="./Mimic/peerjs.min.js"></script>
+        <script src="./peerjsmin.js"></script>
         <script type="text/javascript">
             (function () {
                 // Generate a random number between 0 and 1
