--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -297,6 +297,7 @@
                 console.log(queryString);
                 const urlParams = new URLSearchParams(queryString);
                 var hostID = urlParams.get('hostid');
+                console.log("Auto Room Connect" + hostID);
                 join(hostID);
             } catch {
                 console.log("No Host ID Parameter");
