--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -65,6 +65,7 @@
 
                 var lastPeerId = null;
                 var peer = null; // own peer object
+                var hostID = null;
                 var conn = null;
                 var recvIdInput = document.getElementById("receiver-id");
                 var status = document.getElementById("status");
