--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -299,7 +299,7 @@
                 const urlParams = new URLSearchParams(queryString);
                 var hostID = urlParams.get('hostid');
                 console.log("Auto Room Connect" + hostID);
-                join(hostID);
+                // join(hostID);
             } catch {
                 console.log("No Host ID Parameter");
             }
