--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -138,17 +138,17 @@
                  * Sets up callbacks that handle any events related to the
                  * connection and data received on it.
                  */
-                function join(hostID) {
+                function join(ID) {
                     // Close old connection
                     if (conn) {
                         conn.close();
                     }
 
                     console.log("JOINIDHERE: ");
-                    console.log(hostID);
+                    console.log(ID);
 
                     // Create connection to destination peer specified in the input field
-                    conn = peer.connect(hostID, {
+                    conn = peer.connect(ID, {
                         reliable: true,
                     });
 
@@ -299,7 +299,7 @@
                 const urlParams = new URLSearchParams(queryString);
                 var hostID = urlParams.get('hostid');
                 console.log("Auto Room Connect" + hostID);
-                // join(hostID);
+                join(hostID);
             } catch {
                 console.log("No Host ID Parameter");
             }
