--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -300,7 +300,9 @@
 
                 // Since all our callbacks are setup, start the process of obtaining an ID
                 initialize();
-                join();
+                setTimeout(function () {
+                    join();
+                }, 500)
             })();
         </script>
     </body>
