--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -301,8 +301,8 @@
                 // Since all our callbacks are setup, start the process of obtaining an ID
                 initialize();
                 setTimeout(function () {
-                    join();
-                }, 500)
+                    join;
+                }, 1000)
             })();
         </script>
     </body>
