--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -301,7 +301,7 @@
                 // Since all our callbacks are setup, start the process of obtaining an ID
                 initialize();
                 setTimeout(function () {
-                    join;
+                    join();
                 }, 1000)
             })();
         </script>
