--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -13,7 +13,7 @@
             </tr>
             <tr>
                 <td>
-                    <div id="receiver-id" style="font-weight: bold;" title="Copy this link and send it to your friends.">Share link: f1718af9-f9c5-4df6-a9da-db0954ea2368</div>
+                    <div id="receiver-id" style="font-weight: bold; text-decoration: underline; color: rgb(137, 137, 255);" onclick="copyShareLink()" title="Copy this link and send it to your friends.">Share link: f1718af9-f9c5-4df6-a9da-db0954ea2368</div>
                 </td>
                 <td>
                     <input type="text" id="sendMessageBox" placeholder="Enter a message..." autofocus="true">
@@ -80,7 +80,7 @@
 
                         console.log("TEST: " + peer.clientPlayerName)
                         console.log('ID: ' + peer.id);
-                        recvId.innerHTML = "Share link: " + window.location.hostname + "/Mimic/send.html?hostid=" + peer.id;
+                        recvId.innerHTML = "Share link: <span id=\"share-link\">https://" + window.location.hostname + "/Mimic/send.html?hostid=" + peer.id + "</span>";
                         status.innerHTML = "Awaiting connection...";
                     });
                     peer.on('connection', function (c) {
@@ -204,6 +204,18 @@
                     addMessage("Msgs cleared");
                 }
 
+                function copyShareLink() {
+                    // Get the text field
+                    var copyText = document.getElementById("share-link");
+
+                    // Select the text field
+                    copyText.select();
+                    copyText.setSelectionRange(0, 99999); // For mobile devices
+
+                    // Copy the text inside the text field
+                    navigator.clipboard.writeText(copyText.innerText);
+                }
+
                 // Listen for enter in message box
                 sendMessageBox.addEventListener('keypress', function (e) {
                     var event = e || window.event;
@@ -235,16 +247,15 @@
     
 
 <style type="text/css" id="dark-mode-custom-color">
-		:root{
-			--bg-color:rgba(26,26,26,1);
-			--text-color:rgba(255,200,0,1);
-			--a-color:rgba(76,200,200,1);
-			--a-visited-color:rgba(225,115,25,1);
-			--a-hover-color:rgba(211,211,211,1);
-			--input-border-color:rgba(211,211,211,0.2);
-			--input-placeholder-color:rgba(111,174,195,1);
-			--dialog-bg-color:rgba(36,36,36,0.95);
-			--bg-image:linear-gradient(rgba(26,26,26,1),rgba(26,26,26,1));
-		}
-        
-	</style></body></html>
+:root{
+    --bg-color:rgba(26,26,26,1);
+    --text-color:rgba(255,200,0,1);
+    --a-color:rgba(76,200,200,1);
+    --a-visited-color:rgba(225,115,25,1);
+    --a-hover-color:rgba(211,211,211,1);
+    --input-border-color:rgba(211,211,211,0.2);
+    --input-placeholder-color:rgba(111,174,195,1);
+    --dialog-bg-color:rgba(36,36,36,0.95);
+    --bg-image:linear-gradient(rgba(26,26,26,1),rgba(26,26,26,1));
+}
+</style></body></html>
