--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -3,7 +3,7 @@
         
         <meta name="viewport" content="width=device-width">
         <title>Mimic revanced - Host</title>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./style.css?v=0.1">
     </head>
     <body>
         <table class="display">
