--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width">
         <title>Mimic revanced</title>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./style.css?v=0.1">
     </head>
     <body>
         <table class="control">
