pairs array list test

--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -229,8 +229,9 @@
                 navigator.clipboard.writeText(copyText.innerText);
             }
         </script>
-    
 
+        <script src="./mimicGameLogic.js">
+        </script>
 <style type="text/css" id="dark-mode-custom-color">
 :root{
     --bg-color:rgba(26,26,26,1);
