--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -230,7 +230,7 @@
             }
         </script>
 
-        <script src="./mimicGameLogic.js">
+        <script src="./mimicGameLogic.js?v=0.1">
         </script>
 <style type="text/css" id="dark-mode-custom-color">
 :root{
