--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -28,6 +28,12 @@
             <tr>
                 <td><button onclick="activateGame(players.length)">Start Game</button></td>
             </tr>
+            <tr>
+                <td>Players Connected:</td>
+            </tr>
+            <tr>
+                <td><p id="player-list"></p></td>
+            </tr>
         </tbody></table>
 
         <script src="./peerjsmin.js"></script>
@@ -47,6 +53,7 @@
                 var sendMessageBox = document.getElementById("sendMessageBox");
                 var sendButton = document.getElementById("sendButton");
                 var clearMsgsButton = document.getElementById("clearMsgsButton");
+                var playerListElement = document.getElementById("player-list");
 
                 /**
                  * Create the Peer object for our end of the connection.
@@ -79,6 +86,7 @@
                         console.log("TEST: " + conn);
                         cPlayerID = c.peer
                         players[cPlayerID] = {playerName : "unknown"};
+                        updatePlayerList()
                         currentConn = c
                         console.log("Connected to: " + c.peer);
                         status.innerHTML = "Connected";
@@ -134,6 +142,7 @@
                         currentConn.on('close', function () { // Execute code when user disconnects.
                             for (let step = 0; step < conn.length; step++) {
                                 if (conn[step]["_open"] == false) {
+                                    // players.delete(conn[step]);
                                     conn.splice(step, 1);
                                 }
                             }
@@ -231,9 +240,22 @@
                 // Copy the text in the share link element
                 navigator.clipboard.writeText(copyText.innerText);
             }
+
+            function updatePlayerList() {
+                playersConnectedList = "";
+
+                for (var player in players) {
+                    if (playersConnectedList != "") {
+                        playersConnectedList = playersConnectedList + ", ";
+                    }
+                    playersConnectedList = playersConnectedList + ", " + players["playerName"];
+                }
+
+                playerListElement.innerHTML = playersConnectedList;
+            }
         </script>
 
-        <script src="./mimicGameLogic.js?v=0.24">
+        <script src="./mimicGameLogic.js?v=0.25">
         </script>
 <style type="text/css" id="dark-mode-custom-color">
 :root{
