--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -55,6 +55,9 @@
                 var clearMsgsButton = document.getElementById("clearMsgsButton");
                 var playerListElement = document.getElementById("player-list");
 
+                console.log("\n\n");
+                console.log(playerListElement);
+
                 /**
                  * Create the Peer object for our end of the connection.
                  *
