--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -232,6 +232,11 @@
                     playersConnectedList = "";
 
                     for (var player in players) {
+                        console.log(player)
+                        console.log("NEXT")
+                        console.log(players["playerName"])
+                        console.log("NEXT2")
+                        console.log(players)
                         if (playersConnectedList != "") {
                             playersConnectedList = playersConnectedList + ", ";
                         }
