--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -232,6 +232,8 @@
                     playersConnectedList = "";
 
                     for (var player in players) {
+                        console.log(player)
+                        console.log(player["playerName"]);
                         if (playersConnectedList != "") {
                             playersConnectedList = playersConnectedList + ", ";
                         }
